# food-analysis-webapp

./: .Dockerfile  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  create_file.sh  pyproject.toml  test_nlp_spacy.ipynb
.github/workflows/: ci.yml
docs/source/: conf.py  index.rst
src/food_analysis/: app.py
src/food_analysis/core/: analyzer.py  data_loader.py  note_et_avis.py
src/food_analysis/feature_engineering/: add_tokens.py
src/food_analysis/pages/: recipe_ratings.py
src/food_analysis/tests/: test_analyzer.py  test_data_loader.py  test_note_et_avis.py  test_recipe_ratings_page.py
src/food_analysis/utils/: config.py  logger.py
tests/unit/: test_app.py  test_data_loader.py  test_example.py  test_note_et_avis.py  test_recipe_ratings_show_recipe_details.py  test_recipe_ratings_show_recipe_ratings_page.py  text_analyzer.py
